--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     
-    <link rel="icon" type="image/jpg" href="capa-app.jpg">
-    <link rel="apple-touch-icon" href="capa-app.jpg">
+<link rel="icon" type="image/png" href="capa-app.png">
+<link rel="apple-touch-icon" href="capa-app.png">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
